--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "do-test",
+  "name": "bai5",
   "homepage": "https://userdtc223.github.io/bai5/build/",
   "version": "0.1.0",
   "private": true,
