--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bai5",
-  "homepage": "https://userdtc223.github.io/bai5/build/",
+  "homepage": "https://userdtc223.github.io/bai5/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
